2010-09-23  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh, pandora_server_installer, pandora_server.spec:
	changed the permissions 750 for the dir "data_in" to 770, for to allow the
	web api call for add module data for agent.
	
	TODO: change the pandora_server.redhat.spec the permissions for dir
	"data_in".

2010-09-23  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Improved the db_process_insert
	function against the null values

2010-09-23  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function db_process_insert
	to insert a generic query receiving a hash reference with
	the parameters (columns in index and value in values)

2010-09-22  Sancho Lerena <slerena@artica.es>

	* pandora_server/pandora_server.spec: Updated spec with some 
	missing deps.

2010-09-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a couple of missing macros in 
	  SNMP alerts.

2010-09-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added the parameter with
	a definition module to module creation to create 
	a local module

2010-09-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Do not update agent configuration if
	  not in learning mode. Fixes bug #3069710.

2010-09-21  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed the agent deletion and
	the module deletion to delete all the additional structures
	and files

2010-09-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Update module
	  configuration from XML data files.

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Improved the last feature
	of CLI deleting the modules of all conf files of 
	the incoming directory now

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added to CLI the deletion
	of all modules without policy from config file
